Try forcing export?