@@ -48,15 +48,14 @@ compose.desktop {
         }
 
         jvmArgs("--add-opens", "java.desktop/sun.awt=ALL-UNNAMED")
-        jvmArgs("--add-opens", "java.desktop/java.awt.peer=ALL-UNNAMED") // recommended but not necessary
+        jvmArgs("--add-exports", "java.desktop/sun.awt=ALL-UNNAMED")
+        jvmArgs("--add-exports", "java.desktop/java.awt.peer=ALL-UNNAMED")
+        jvmArgs("--add-exports", "java.desktop/sun.lwawt=ALL-UNNAMED")
+        jvmArgs("--add-exports", "java.desktop/sun.lwawt.macosx=ALL-UNNAMED")
 
-        //Just do these indiscriminately instead of checking os name.
-        jvmArgs("--add-opens", "java.desktop/sun.lwawt=ALL-UNNAMED")
-        jvmArgs("--add-opens", "java.desktop/sun.lwawt.macosx=ALL-UNNAMED")
-
-//        if (System.getProperty("os.name").contains("Mac")) {
-//            jvmArgs("--add-opens", "java.desktop/sun.lwawt=ALL-UNNAMED")
-//            jvmArgs("--add-opens", "java.desktop/sun.lwawt.macosx=ALL-UNNAMED")
-//        }
+       if (System.getProperty("os.name").contains("Mac")) {
+           jvmArgs("--add-opens", "java.desktop/sun.lwawt=ALL-UNNAMED")
+           jvmArgs("--add-opens", "java.desktop/sun.lwawt.macosx=ALL-UNNAMED")
+       }
     }
 }
